# GI_Mapper

./: .env.example  .gitignore  BLOCKCHAIN_IMPLEMENTATION.md  CONTRIBUTING.md  Cargo.toml  DEMO_COMPLETE.md  DEMO_GUIDE.md  FRONTEND_DASHBOARD_COMPLETE.md  LICENSE  Makefile  OPTION1_COMPLETE.md  OPTION1_PROGRESS_SUMMARY.md  OPTION_A_COMPLETE.md  README.md  SETUP_COMPLETE.md  SUBSTRATE_BLOCKCHAIN_COMPLETE.md  TASKS_12_ROI_PREDICTION_IMPLEMENTATION.md  TASK_9.10_IMPLEMENTATION_SUMMARY.md  docker-compose.yml  start-demo.ps1  test-api.ps1
.kiro/specs/ai-blockchain-gis-platform/: design.md  requirements.md  tasks.md
analytics/: Dockerfile  Manifest.toml  Project.toml  README.md  SETUP.md  TASKS_10.2_10.3_10.4_IMPLEMENTATION_SUMMARY.md  TASKS_12_IMPLEMENTATION_COMPLETE.md  TASKS_16_17_COMPLETE.md  TASK_13_MLA_SCORING_COMPLETE.md  TASK_14_ANOMALY_DETECTION_SUMMARY.md  TASK_18_PERFORMANCE_MONITORING_COMPLETE.md  TASK_8.2_IMPLEMENTATION_SUMMARY.md  TASK_8.3_IMPLEMENTATION_SUMMARY.md  TASK_9_IMPLEMENTATION_SUMMARY.md  setup_dependencies.jl  test_anomaly_detector.jl  test_anomaly_isolation_only.jl  test_anomaly_quick.jl  test_anomaly_simple.jl  test_basic.jl  test_cluster_integration.jl  test_clustering.jl  test_clustering_simple.jl  test_data_loader.jl  test_dependencies.jl  test_forecaster.jl  test_forecaster_quick.jl  test_grpc_service.jl  test_grpc_simple.jl  test_load_engine.jl  test_mla_scorer.jl  test_performance_tracker.jl  test_risk_assessor.jl  test_risk_quick.jl  test_roi_direct.jl  test_roi_final.jl  test_roi_predictor.jl  test_roi_predictor_quick.jl  test_roi_simple.jl  test_shap.jl  (+2 more)
analytics/proto/: README.md  analytics.proto
analytics/src/: AnalyticsEngine.jl
analytics/src/explainability/: shap_engine.jl
analytics/src/grpc/: service.jl
analytics/src/models/: anomaly_detector.jl  forecaster.jl  mla_scorer.jl  risk_assessor.jl  roi_predictor.jl  spatial_clusterer.jl
analytics/src/monitoring/: performance_tracker.jl
analytics/src/utils/: data_loader.jl  feature_engineering.jl
backend/: AUTHENTICATION.md  Cargo.toml  Dockerfile  README.md  TASK_3.2_IMPLEMENTATION_SUMMARY.md
backend/src/: auth.rs  auth_middleware.rs  blockchain.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  middleware.rs
backend/src/auth/: README.md
backend/src/db/: README.md  audit.rs  cluster.rs  gi_product.rs  prediction.rs  user.rs
backend/src/models/: README.md  cluster.rs  gi_product.rs  mod.rs  prediction.rs  user.rs
backend/src/routes/: anomalies.rs  auth.rs  blockchain.rs  clusters.rs  export.rs  forecasts.rs  gi_products.rs  mla_scores.rs  mod.rs  predictions.rs  risk.rs
backend/tests/: auth_test.rs  cluster_test.rs  db_test.rs  gi_product_test.rs  integration_test.rs
database/: README.md  SCHEMA_REFERENCE.md  init.sql  verify_schema.sql
database/migrations/: 001_create_schema.sql
docs/: ARCHITECTURE.md  SETUP.md
frontend/: DASHBOARD_README.md  README.md  SETUP_GUIDE.md  index.html  index_react.html  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/pages/: AnomalyDetectionPage.jsx  Dashboard.jsx  (+6 more)
scripts/: create-admin-user.ps1  create-admin-user.sql  verify-setup.ps1  verify-setup.sh
substrate/: README.md  SETUP.md
substrate/pallets/data-hashes/: Cargo.toml
substrate/pallets/data-hashes/src/: lib.rs
(+1 files in other folders)
